fix feature img to align center

--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -106,12 +106,13 @@ p {
 img {
     max-height: 100%;
     max-width: 100%;
+    display: block;
+    margin: auto;
 }
 .feature-item-img  {
     height: 96.07px;
     width: 90px;
     margin-top:61px;
-    margin-right:267px;
 }
 .feature-item-title {
     height: 44px;	
